--- a/hf-space-config.yml
+++ b/hf-space-config.yml
@@ -4,7 +4,7 @@ colorFrom: yellow
 colorTo: yellow
 sdk: docker
 short_description: Minimalist web-searching app with browser-based AI assistant
-pinned: true
+pinned: false
 custom_headers:
   cross-origin-embedder-policy: require-corp
   cross-origin-opener-policy: same-origin
